# aelvory

./: .dockerignore  .gitignore  Aelvory.sln  README.md  docker-compose.yml  nswag.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.config/: dotnet-tools.json
.github/workflows/: desktop-release.yml  vscode-extension.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vite.config.vscode.ts
apps/desktop/scripts/: build.mjs
apps/desktop/src/: App.vue  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/landing/: Caddyfile  Dockerfile  README.md
apps/landing/public/: index.html  style.css
apps/server/: Aelvory.Server.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
apps/server.tests/: Aelvory.Server.Tests.csproj
apps/server.tests/Auth/: RegisterLoginTests.cs  SecurityHardeningTests.cs
apps/server.tests/Fixtures/: AelvoryFactory.cs  ApiClient.cs  PostgresFixture.cs  SyncEntries.cs  TestBootstrap.cs  TestSession.cs
apps/server.tests/Multitenancy/: OrgCrudTests.cs  OrgScopingTests.cs  ProjectMembersTests.cs  ProjectStatsTests.cs  RestrictedEditorTests.cs  TombstonePropagationTests.cs
apps/server.tests/Sync/: ConflictAndCursorTests.cs  PushPullTests.cs
apps/server/Controllers/: AuthController.cs  CollectionsController.cs  EnvironmentsController.cs  HealthController.cs  OrganizationsController.cs  ProjectMembersController.cs  ProjectsController.cs  RequestsController.cs  RunnerController.cs  SyncController.cs
apps/server/Data/: AelvoryDbContext.cs
apps/server/Dtos/: Auth.cs  Collection.cs  Environment.cs  Organization.cs  Project.cs  Request.cs  Runner.cs  Sync.cs
apps/server/Entities/: ActivityLog.cs  ApiEnvironment.cs  ApiRequest.cs  Collection.cs  Organization.cs  Project.cs  RefreshToken.cs  Script.cs  SyncEntry.cs  User.cs  Variable.cs
apps/server/HealthChecks/: DatabaseHealthCheck.cs
apps/server/Hubs/: ActivityHub.cs  SyncHub.cs
apps/server/Migrations/: 20260424105524_Init.Designer.cs  20260424105524_Init.cs  20260424131225_AddCollectionAuthAndScope.Designer.cs  20260424131225_AddCollectionAuthAndScope.cs  20260424184838_AddSyncEntries.Designer.cs  (+5 more)
apps/vscode-extension/: .vscodeignore  README.md  aelvory-vscode-0.0.1.vsix  aelvory-vscode-0.0.2.vsix  esbuild.mjs  package.json  tsconfig.json
apps/web/: Caddyfile  Dockerfile  README.md  env.d.ts  index.html  package.json  vite.config.ts
apps/web/src/: App.vue  (+1 more)
deploy/: .env.example  README.md  docker-compose.yml
(+143 files in other folders)
