[package]
name = "aelvory"
version = "0.0.3"
description = "Aelvory desktop shell"
authors = ["you"]
edition = "2021"

[lib]
name = "aelvory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Per-request `danger.acceptInvalidCerts` / `acceptInvalidHostnames`
# pass through to reqwest's matching client-builder flags by default
# in plugin-http v2 — no Cargo feature needed. The JS layer guards
# them behind `settings.ignoreCerts` (default off, with a prominent
# Settings-UI warning).
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
