[package]
name = "aelvory"
version = "0.0.5"
description = "Aelvory desktop shell"
authors = ["you"]
edition = "2021"

[lib]
name = "aelvory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# `dangerous-settings` enables per-request `danger.acceptInvalidCerts`
# / `acceptInvalidHostnames` flags. Without it, plugin-http rejects
# the call at runtime with "dangerous settings used but are not
# enabled" instead of skipping cert validation. The JS layer guards
# the flag behind `settings.ignoreCerts` (default off, with a
# prominent Settings-UI warning) so the feature being compiled in
# isn't itself the security risk — only flipping the in-app toggle
# is.
tauri-plugin-http = { version = "2", features = ["dangerous-settings"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
